2009-10-06  Matthew Junker  <matthew.junker@sbcglobal.net>  (tiny change)

	* calendar/cal-tex.el (cal-tex-cursor-month-landscape)
	(cal-tex-cursor-month): Correctly increment the end date for diary and
	holiday listing.  (Bug#4626)

2009-10-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* help-fns.el (describe-function-1): Don't burp is the function is not
	a symbol.

2009-10-05  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/chart.el (chart-face-pixmap-list, chart-new-buffer, chart)
	(chart-axis-range, chart-axis-names, chart-sequece, chart-bar)
	(chart-draw, chart-axis-draw, chart-sort, chart-sort-matchlist)
	(chart-draw-line, chart-bar-quickie): Fix typos in docstrings.

	* emacs-lisp/eieio.el (generic-p, eieiomt-next, eieio-generic-form)
	(eieio-default-superclass): Reflow docstrings.
	(this, class-option-assoc, defclass, eieio-class-un-autoload)
	(eieio-unbind-method-implementations, defmethod)
	(eieio-validate-slot-value, eieio-validate-class-slot-value)
	(oref-default, eieio-oref-default, eieio-oset, eieio-oset-default)
	(with-slots, eieio-add-new-slot, object-assoc, object-remove-from-list)
	(eieio-slot-originating-class-p, eieio-slot-name-index)
	(eieio-pre-method-execution-hooks, eieio-initarg-to-attribute)
	(constructor, initialize-instance, no-next-method, object-print)
	(object-write, eieio-override-prin1, eieio-edebug-prin1-to-string):
	Fix typos in docstrings.
	(eieio-defclass, eieio-perform-slot-validation-for-default, defgeneric)
	(child-of-class-p, object-slots, slot-boundp, slot-exists-p)
	(next-method-p): Doc fixes.
	(eieio-add-new-slot, call-next-method, eieiomt-add, change-class):
	Fix typos in error messages.
	(eieio-defmethod): Fix typo in description of generic method.

	* emacs-lisp/eieio-base.el (eieio-instance-inheritor, slot-unbound)
	(eieio-persistent-save-interactive, slot-missing):
	Fix typos in docstrings.
	(eieio-instance-inheritor-slot-boundp): Doc fix.

	* emacs-lisp/eieio-comp.el (byte-compile-file-form-defmethod)